--- a/python/performance/performance-tables.ipynb
+++ b/python/performance/performance-tables.ipynb
@@ -25,11 +25,20 @@
       "scion : 75.0\n",
       "scion : 75.0\n",
       "scion : 75.0\n",
+      "scion : 75.0\n",
+      "scion : 75.0\n",
+      "scion : 75.0\n",
+      "scion : 75.0\n",
       "-------------------------\n",
-      "scion lin-lin elapsed time = 3.65 s\n",
-      "scion lin-log elapsed time = 3.78 s\n",
-      "scion log-lin elapsed time = 3.87 s\n",
-      "scion log-log elapsed time = 3.91 s\n",
+      "scion lin-lin elapsed time = 2.54 s\n",
+      "scion lin-log elapsed time = 2.66 s\n",
+      "scion log-lin elapsed time = 2.86 s\n",
+      "scion log-log elapsed time = 2.72 s\n",
+      "-------------------------\n",
+      "scion interpolation table single lin-lin elapsed time = 2.06 s\n",
+      "scion interpolation table single lin-log elapsed time = 2.18 s\n",
+      "scion interpolation table single log-lin elapsed time = 2.35 s\n",
+      "scion interpolation table single log-log elapsed time = 2.35 s\n",
       "-------------------------\n"
      ]
     }
@@ -39,16 +48,25 @@
     "\n",
     "x = [ i for i in range( 1, 100 ) ]\n",
     "y = [ i for i in reversed( x ) ]\n",
+    "boundaries = [ len( x ) - 1 ]\n",
     "\n",
     "scion_test_linlin = scion.math.LinearLinearTable( x, y )\n",
     "scion_test_linlog = scion.math.LinearLogTable( x, y )\n",
     "scion_test_loglin = scion.math.LogLinearTable( x, y )\n",
     "scion_test_loglog = scion.math.LogLogTable( x, y )\n",
+    "scion_test_interpolationtable_linlin = scion.math.InterpolationTable( x, y, boundaries, [ scion.interpolation.InterpolationType.LinearLinear ] )\n",
+    "scion_test_interpolationtable_linlog = scion.math.InterpolationTable( x, y, boundaries, [ scion.interpolation.InterpolationType.LinearLog ] )\n",
+    "scion_test_interpolationtable_loglin = scion.math.InterpolationTable( x, y, boundaries, [ scion.interpolation.InterpolationType.LogLinear ] )\n",
+    "scion_test_interpolationtable_loglog = scion.math.InterpolationTable( x, y, boundaries, [ scion.interpolation.InterpolationType.LogLog ] )\n",
     "\n",
     "print( 'scion :', scion_test_linlin( 25. ) )\n",
     "print( 'scion :', scion_test_linlog( 25. ) )\n",
     "print( 'scion :', scion_test_loglin( 25. ) )\n",
     "print( 'scion :', scion_test_loglog( 25. ) )\n",
+    "print( 'scion :', scion_test_interpolationtable_linlin( 25. ) )\n",
+    "print( 'scion :', scion_test_interpolationtable_loglin( 25. ) )\n",
+    "print( 'scion :', scion_test_interpolationtable_linlog( 25. ) )\n",
+    "print( 'scion :', scion_test_interpolationtable_loglog( 25. ) )\n",
     "\n",
     "start = time.perf_counter()\n",
     "for i in range( repeat ) : result = scion_test_linlin( 25. )\n",
@@ -70,11 +88,36 @@
     "end = time.perf_counter()\n",
     "time_scion_loglog = end - start\n",
     "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : result = scion_test_interpolationtable_linlin( 25. )\n",
+    "end = time.perf_counter()\n",
+    "time_scion_interpolationtable_linlin = end - start\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : result = scion_test_interpolationtable_linlog( 25. )\n",
+    "end = time.perf_counter()\n",
+    "time_scion_interpolationtable_linlog = end - start\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : result = scion_test_interpolationtable_loglin( 25. )\n",
+    "end = time.perf_counter()\n",
+    "time_scion_interpolationtable_loglin = end - start\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : result = scion_test_interpolationtable_loglog( 25. )\n",
+    "end = time.perf_counter()\n",
+    "time_scion_interpolationtable_loglog = end - start\n",
+    "\n",
     "print( '-------------------------' )\n",
     "print( 'scion lin-lin elapsed time = {:.3} s'.format( time_scion_linlin ) )\n",
     "print( 'scion lin-log elapsed time = {:.3} s'.format( time_scion_linlog ) )\n",
     "print( 'scion log-lin elapsed time = {:.3} s'.format( time_scion_loglin ) )\n",
     "print( 'scion log-log elapsed time = {:.3} s'.format( time_scion_loglog ) )\n",
+    "print( '-------------------------' )\n",
+    "print( 'scion interpolation table single lin-lin elapsed time = {:.3} s'.format( time_scion_interpolationtable_linlin ) )\n",
+    "print( 'scion interpolation table single lin-log elapsed time = {:.3} s'.format( time_scion_interpolationtable_linlog ) )\n",
+    "print( 'scion interpolation table single log-lin elapsed time = {:.3} s'.format( time_scion_interpolationtable_loglin ) )\n",
+    "print( 'scion interpolation table single log-log elapsed time = {:.3} s'.format( time_scion_interpolationtable_loglog ) )\n",
     "print( '-------------------------' )\n"
    ]
   },
@@ -92,11 +135,20 @@
       "scion : [1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0, 11.0, 12.0, 13.0, 14.0, 15.0, 16.0, 17.0, 18.0, 19.0, 20.0, 21.0, 22.0, 23.0, 24.0, 25.0, 26.0, 27.0, 28.0, 29.0, 30.0, 31.0, 32.0, 33.0, 34.0, 35.0, 36.0, 37.0, 38.0, 39.0, 40.0, 41.0, 42.0, 43.0, 44.0, 45.0, 46.0, 47.0, 48.0, 49.0, 50.0, 51.0, 52.0, 53.0, 54.0, 55.0, 56.0, 57.0, 58.0, 59.0, 60.0, 61.0, 62.0, 63.0, 64.0, 65.0, 66.0, 67.0, 68.0, 69.0, 70.0, 71.0, 72.0, 73.0, 74.0, 75.0, 76.0, 77.0, 78.0, 79.0, 80.0, 81.0, 82.0, 83.0, 84.0, 85.0, 86.0, 87.0, 88.0, 89.0, 90.0, 91.0, 92.0, 93.0, 94.0, 95.0, 96.0, 97.0, 98.0, 99.0]\n",
       "scion : [1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0, 11.0, 12.0, 13.0, 14.0, 15.0, 16.0, 17.0, 18.0, 19.0, 20.0, 21.0, 22.0, 23.0, 24.0, 25.0, 26.0, 27.0, 28.0, 29.0, 30.0, 31.0, 32.0, 33.0, 34.0, 35.0, 36.0, 37.0, 38.0, 39.0, 40.0, 41.0, 42.0, 43.0, 44.0, 45.0, 46.0, 47.0, 48.0, 49.0, 50.0, 51.0, 52.0, 53.0, 54.0, 55.0, 56.0, 57.0, 58.0, 59.0, 60.0, 61.0, 62.0, 63.0, 64.0, 65.0, 66.0, 67.0, 68.0, 69.0, 70.0, 71.0, 72.0, 73.0, 74.0, 75.0, 76.0, 77.0, 78.0, 79.0, 80.0, 81.0, 82.0, 83.0, 84.0, 85.0, 86.0, 87.0, 88.0, 89.0, 89.5, 90.0, 90.5, 91.0, 91.5, 92.0, 92.5, 93.0, 93.5, 94.0, 94.25, 94.5, 94.75, 95.0, 95.25, 95.5, 95.75, 96.0, 96.25, 96.5, 96.75, 97.0, 97.125, 97.25, 97.375, 97.5, 97.625, 97.75, 97.875, 98.0, 98.125, 98.25, 98.375, 98.5, 98.625, 98.75, 98.875, 99.0]\n",
       "scion : [1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0, 11.0, 12.0, 13.0, 14.0, 15.0, 16.0, 17.0, 18.0, 19.0, 20.0, 21.0, 22.0, 23.0, 24.0, 25.0, 26.0, 27.0, 28.0, 29.0, 30.0, 31.0, 32.0, 33.0, 34.0, 35.0, 36.0, 37.0, 38.0, 39.0, 40.0, 41.0, 42.0, 43.0, 44.0, 45.0, 46.0, 47.0, 48.0, 49.0, 50.0, 51.0, 52.0, 53.0, 54.0, 55.0, 56.0, 57.0, 58.0, 59.0, 60.0, 61.0, 62.0, 63.0, 64.0, 65.0, 66.0, 67.0, 68.0, 69.0, 70.0, 71.0, 72.0, 73.0, 74.0, 75.0, 76.0, 77.0, 78.0, 79.0, 80.0, 81.0, 82.0, 83.0, 84.0, 85.0, 86.0, 87.0, 88.0, 88.5, 89.0, 89.5, 90.0, 90.5, 91.0, 91.5, 92.0, 92.5, 93.0, 93.5, 94.0, 94.25, 94.5, 94.75, 95.0, 95.25, 95.5, 95.75, 96.0, 96.25, 96.5, 96.75, 97.0, 97.125, 97.25, 97.375, 97.5, 97.625, 97.75, 97.875, 98.0, 98.125, 98.25, 98.375, 98.5, 98.625, 98.75, 98.875, 99.0]\n",
+      "scion : [1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0, 11.0, 12.0, 13.0, 14.0, 15.0, 16.0, 17.0, 18.0, 19.0, 20.0, 21.0, 22.0, 23.0, 24.0, 25.0, 26.0, 27.0, 28.0, 29.0, 30.0, 31.0, 32.0, 33.0, 34.0, 35.0, 36.0, 37.0, 38.0, 39.0, 40.0, 41.0, 42.0, 43.0, 44.0, 45.0, 46.0, 47.0, 48.0, 49.0, 50.0, 51.0, 52.0, 53.0, 54.0, 55.0, 56.0, 57.0, 58.0, 59.0, 60.0, 61.0, 62.0, 63.0, 64.0, 65.0, 66.0, 67.0, 68.0, 69.0, 70.0, 71.0, 72.0, 73.0, 74.0, 75.0, 76.0, 77.0, 78.0, 79.0, 80.0, 81.0, 82.0, 83.0, 84.0, 85.0, 86.0, 87.0, 88.0, 89.0, 90.0, 91.0, 92.0, 93.0, 94.0, 95.0, 96.0, 97.0, 98.0, 99.0]\n",
+      "scion : [1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0, 11.0, 12.0, 13.0, 14.0, 15.0, 16.0, 17.0, 18.0, 19.0, 20.0, 21.0, 22.0, 23.0, 24.0, 25.0, 26.0, 27.0, 28.0, 29.0, 30.0, 31.0, 32.0, 33.0, 34.0, 35.0, 36.0, 37.0, 38.0, 39.0, 40.0, 41.0, 42.0, 43.0, 44.0, 45.0, 46.0, 47.0, 48.0, 49.0, 50.0, 51.0, 52.0, 53.0, 54.0, 55.0, 56.0, 57.0, 58.0, 59.0, 60.0, 61.0, 62.0, 63.0, 64.0, 65.0, 66.0, 67.0, 68.0, 69.0, 70.0, 71.0, 72.0, 73.0, 74.0, 75.0, 76.0, 77.0, 78.0, 79.0, 80.0, 81.0, 82.0, 83.0, 84.0, 85.0, 86.0, 87.0, 88.0, 89.0, 89.5, 90.0, 90.5, 91.0, 91.5, 92.0, 92.5, 93.0, 93.5, 94.0, 94.25, 94.5, 94.75, 95.0, 95.25, 95.5, 95.75, 96.0, 96.25, 96.5, 96.75, 97.0, 97.125, 97.25, 97.375, 97.5, 97.625, 97.75, 97.875, 98.0, 98.125, 98.25, 98.375, 98.5, 98.625, 98.75, 98.875, 99.0]\n",
+      "scion : [1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0, 11.0, 12.0, 13.0, 14.0, 15.0, 16.0, 17.0, 18.0, 19.0, 20.0, 21.0, 22.0, 23.0, 24.0, 25.0, 26.0, 27.0, 28.0, 29.0, 30.0, 31.0, 32.0, 33.0, 34.0, 35.0, 36.0, 37.0, 38.0, 39.0, 40.0, 41.0, 42.0, 43.0, 44.0, 45.0, 46.0, 47.0, 48.0, 49.0, 50.0, 51.0, 52.0, 53.0, 54.0, 55.0, 56.0, 57.0, 58.0, 59.0, 60.0, 61.0, 62.0, 63.0, 64.0, 65.0, 66.0, 67.0, 68.0, 69.0, 70.0, 71.0, 72.0, 73.0, 74.0, 75.0, 76.0, 77.0, 78.0, 79.0, 80.0, 81.0, 82.0, 83.0, 84.0, 85.0, 86.0, 87.0, 88.0, 89.0, 90.0, 91.0, 92.0, 93.0, 94.0, 95.0, 96.0, 97.0, 98.0, 99.0]\n",
+      "scion : [1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0, 11.0, 12.0, 13.0, 14.0, 15.0, 16.0, 17.0, 18.0, 19.0, 20.0, 21.0, 22.0, 23.0, 24.0, 25.0, 26.0, 27.0, 28.0, 29.0, 30.0, 31.0, 32.0, 33.0, 34.0, 35.0, 36.0, 37.0, 38.0, 39.0, 40.0, 41.0, 42.0, 43.0, 44.0, 45.0, 46.0, 47.0, 48.0, 49.0, 50.0, 51.0, 52.0, 53.0, 54.0, 55.0, 56.0, 57.0, 58.0, 59.0, 60.0, 61.0, 62.0, 63.0, 64.0, 65.0, 66.0, 67.0, 68.0, 69.0, 70.0, 71.0, 72.0, 73.0, 74.0, 75.0, 76.0, 77.0, 78.0, 79.0, 80.0, 81.0, 82.0, 83.0, 84.0, 85.0, 86.0, 87.0, 88.0, 88.5, 89.0, 89.5, 90.0, 90.5, 91.0, 91.5, 92.0, 92.5, 93.0, 93.5, 94.0, 94.25, 94.5, 94.75, 95.0, 95.25, 95.5, 95.75, 96.0, 96.25, 96.5, 96.75, 97.0, 97.125, 97.25, 97.375, 97.5, 97.625, 97.75, 97.875, 98.0, 98.125, 98.25, 98.375, 98.5, 98.625, 98.75, 98.875, 99.0]\n",
       "-------------------------\n",
-      "scion lin-lin elapsed time = 0.99 s\n",
-      "scion lin-log elapsed time = 9.04 s\n",
-      "scion log-lin elapsed time = 9.11 s\n",
-      "scion log-log elapsed time = 14.3 s\n",
+      "scion lin-lin elapsed time = 0.792 s\n",
+      "scion lin-log elapsed time = 5.06 s\n",
+      "scion log-lin elapsed time = 7.01 s\n",
+      "scion log-log elapsed time = 9.01 s\n",
+      "-------------------------\n",
+      "scion interpolation table single lin-lin elapsed time = 0.762 s\n",
+      "scion interpolation table single lin-log elapsed time = 5.02 s\n",
+      "scion interpolation table single log-lin elapsed time = 7.04 s\n",
+      "scion interpolation table single log-log elapsed time = 9.13 s\n",
       "-------------------------\n"
      ]
     }
@@ -111,11 +163,19 @@
     "scion_test_linlog = scion.math.LinearLogTable( x, y )\n",
     "scion_test_loglin = scion.math.LogLinearTable( x, y )\n",
     "scion_test_loglog = scion.math.LogLogTable( x, y )\n",
+    "scion_test_interpolationtable_linlin = scion.math.InterpolationTable( x, y, boundaries, [ scion.interpolation.InterpolationType.LinearLinear ] )\n",
+    "scion_test_interpolationtable_linlog = scion.math.InterpolationTable( x, y, boundaries, [ scion.interpolation.InterpolationType.LinearLog ] )\n",
+    "scion_test_interpolationtable_loglin = scion.math.InterpolationTable( x, y, boundaries, [ scion.interpolation.InterpolationType.LogLinear ] )\n",
+    "scion_test_interpolationtable_loglog = scion.math.InterpolationTable( x, y, boundaries, [ scion.interpolation.InterpolationType.LogLog ] )\n",
     "\n",
     "print( 'scion :', scion_test_linlin.linearise().x )\n",
     "print( 'scion :', scion_test_linlog.linearise().x )\n",
     "print( 'scion :', scion_test_loglin.linearise().x )\n",
     "print( 'scion :', scion_test_loglog.linearise().x )\n",
+    "print( 'scion :', scion_test_interpolationtable_linlin.linearise().x  )\n",
+    "print( 'scion :', scion_test_interpolationtable_loglin.linearise().x  )\n",
+    "print( 'scion :', scion_test_interpolationtable_linlog.linearise().x  )\n",
+    "print( 'scion :', scion_test_interpolationtable_loglog.linearise().x  )\n",
     "\n",
     "start = time.perf_counter()\n",
     "for i in range( repeat ) : result = scion_test_linlin.linearise()\n",
@@ -137,18 +197,154 @@
     "end = time.perf_counter()\n",
     "time_scion_loglog = end - start\n",
     "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : result = scion_test_interpolationtable_linlin.linearise()\n",
+    "end = time.perf_counter()\n",
+    "time_scion_interpolationtable_linlin = end - start\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : result = scion_test_interpolationtable_linlog.linearise()\n",
+    "end = time.perf_counter()\n",
+    "time_scion_interpolationtable_linlog = end - start\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : result = scion_test_interpolationtable_loglin.linearise()\n",
+    "end = time.perf_counter()\n",
+    "time_scion_interpolationtable_loglin = end - start\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : result = scion_test_interpolationtable_loglog.linearise()\n",
+    "end = time.perf_counter()\n",
+    "time_scion_interpolationtable_loglog = end - start\n",
+    "\n",
     "print( '-------------------------' )\n",
     "print( 'scion lin-lin elapsed time = {:.3} s'.format( time_scion_linlin ) )\n",
     "print( 'scion lin-log elapsed time = {:.3} s'.format( time_scion_linlog ) )\n",
     "print( 'scion log-lin elapsed time = {:.3} s'.format( time_scion_loglin ) )\n",
     "print( 'scion log-log elapsed time = {:.3} s'.format( time_scion_loglog ) )\n",
+    "print( '-------------------------' )\n",
+    "print( 'scion interpolation table single lin-lin elapsed time = {:.3} s'.format( time_scion_interpolationtable_linlin ) )\n",
+    "print( 'scion interpolation table single lin-log elapsed time = {:.3} s'.format( time_scion_interpolationtable_linlog ) )\n",
+    "print( 'scion interpolation table single log-lin elapsed time = {:.3} s'.format( time_scion_interpolationtable_loglin ) )\n",
+    "print( 'scion interpolation table single log-log elapsed time = {:.3} s'.format( time_scion_interpolationtable_loglog ) )\n",
+    "print( '-------------------------' )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "dea16fe1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scion : 85.5\n",
+      "scion : 77.89797580786218\n",
+      "scion : 25.495097567963924\n",
+      "scion : 24.69570215105186\n",
+      "-------------------------\n",
+      "scion evaluate 1 elapsed time = 2.43 s\n",
+      "scion evaluate 2 elapsed time = 2.47 s\n",
+      "scion evaluate 3 elapsed time = 2.71 s\n",
+      "scion evaluate 4 elapsed time = 2.75 s\n",
+      "-------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "repeat = 10000000\n",
+    "\n",
+    "x = [ i for i in range( 1, 100 ) ]\n",
+    "y = [ i for i in reversed( x ) ]\n",
+    "boundaries = [ 20, 25, 75, len( x ) - 1 ]\n",
+    "interpolants = [ scion.interpolation.InterpolationType.LinearLinear, \n",
+    "                 scion.interpolation.InterpolationType.LinearLog, \n",
+    "                 scion.interpolation.InterpolationType.LogLinear, \n",
+    "                 scion.interpolation.InterpolationType.LogLog ]\n",
+    "\n",
+    "scion_test = scion.math.InterpolationTable( x, y, boundaries, interpolants )\n",
+    "\n",
+    "print( 'scion :', scion_test( 14.5 ) )\n",
+    "print( 'scion :', scion_test( 22.1 ) )\n",
+    "print( 'scion :', scion_test( 74.5 ) )\n",
+    "print( 'scion :', scion_test( 75.3 ) )\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : result = scion_test( 14.5 )\n",
+    "end = time.perf_counter()\n",
+    "time_scion_1 = end - start\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : result = scion_test( 22.1 )\n",
+    "end = time.perf_counter()\n",
+    "time_scion_2 = end - start\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : result = scion_test( 74.5 )\n",
+    "end = time.perf_counter()\n",
+    "time_scion_3 = end - start\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : result = scion_test( 75.3 )\n",
+    "end = time.perf_counter()\n",
+    "time_scion_4 = end - start\n",
+    "\n",
+    "print( '-------------------------' )\n",
+    "print( 'scion evaluate 1 elapsed time = {:.3} s'.format( time_scion_1 ) )\n",
+    "print( 'scion evaluate 2 elapsed time = {:.3} s'.format( time_scion_2 ) )\n",
+    "print( 'scion evaluate 3 elapsed time = {:.3} s'.format( time_scion_3 ) )\n",
+    "print( 'scion evaluate 4 elapsed time = {:.3} s'.format( time_scion_4 ) )\n",
+    "print( '-------------------------' )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b04fe3cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "scion : [1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0, 11.0, 12.0, 13.0, 14.0, 15.0, 16.0, 17.0, 18.0, 19.0, 20.0, 21.0, 22.0, 23.0, 24.0, 25.0, 26.0, 27.0, 28.0, 29.0, 30.0, 31.0, 32.0, 33.0, 34.0, 35.0, 36.0, 37.0, 38.0, 39.0, 40.0, 41.0, 42.0, 43.0, 44.0, 45.0, 46.0, 47.0, 48.0, 49.0, 50.0, 51.0, 52.0, 53.0, 54.0, 55.0, 56.0, 57.0, 58.0, 59.0, 60.0, 61.0, 62.0, 63.0, 64.0, 65.0, 66.0, 67.0, 68.0, 69.0, 70.0, 71.0, 72.0, 73.0, 74.0, 75.0, 76.0, 77.0, 78.0, 79.0, 80.0, 81.0, 82.0, 83.0, 84.0, 85.0, 86.0, 87.0, 88.0, 88.5, 89.0, 89.5, 90.0, 90.5, 91.0, 91.5, 92.0, 92.5, 93.0, 93.5, 94.0, 94.25, 94.5, 94.75, 95.0, 95.25, 95.5, 95.75, 96.0, 96.25, 96.5, 96.75, 97.0, 97.125, 97.25, 97.375, 97.5, 97.625, 97.75, 97.875, 98.0, 98.125, 98.25, 98.375, 98.5, 98.625, 98.75, 98.875, 99.0]\n",
+      "-------------------------\n",
+      "scion lin-lin elapsed time = 7.69 s\n",
+      "-------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "repeat = 1000000\n",
+    "\n",
+    "x = [ i for i in range( 1, 100 ) ]\n",
+    "y = [ i for i in reversed( x ) ]\n",
+    "boundaries = [ 20, 25, 75, len( x ) - 1 ]\n",
+    "interpolants = [ scion.interpolation.InterpolationType.LinearLinear, \n",
+    "                 scion.interpolation.InterpolationType.LinearLog, \n",
+    "                 scion.interpolation.InterpolationType.LogLinear, \n",
+    "                 scion.interpolation.InterpolationType.LogLog ]\n",
+    "\n",
+    "scion_test = scion.math.InterpolationTable( x, y, boundaries, interpolants )\n",
+    "\n",
+    "print( 'scion :', scion_test.linearise().x )\n",
+    "\n",
+    "start = time.perf_counter()\n",
+    "for i in range( repeat ) : result = scion_test.linearise()\n",
+    "end = time.perf_counter()\n",
+    "time_scion = end - start\n",
+    "\n",
+    "print( '-------------------------' )\n",
+    "print( 'scion lin-lin elapsed time = {:.3} s'.format( time_scion ) )\n",
     "print( '-------------------------' )\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dea16fe1",
+   "id": "91c26141",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -156,7 +352,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -170,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
