--- a/python/performance/performance-tables.ipynb
+++ b/python/performance/performance-tables.ipynb
@@ -30,15 +30,15 @@
       "scion : 75.0\n",
       "scion : 75.0\n",
       "-------------------------\n",
-      "scion lin-lin elapsed time = 2.54 s\n",
-      "scion lin-log elapsed time = 2.66 s\n",
-      "scion log-lin elapsed time = 2.86 s\n",
-      "scion log-log elapsed time = 2.72 s\n",
+      "scion lin-lin elapsed time = 4.4 s\n",
+      "scion lin-log elapsed time = 4.52 s\n",
+      "scion log-lin elapsed time = 4.58 s\n",
+      "scion log-log elapsed time = 4.65 s\n",
       "-------------------------\n",
-      "scion interpolation table single lin-lin elapsed time = 2.06 s\n",
-      "scion interpolation table single lin-log elapsed time = 2.18 s\n",
-      "scion interpolation table single log-lin elapsed time = 2.35 s\n",
-      "scion interpolation table single log-log elapsed time = 2.35 s\n",
+      "scion interpolation table single lin-lin elapsed time = 3.75 s\n",
+      "scion interpolation table single lin-log elapsed time = 3.97 s\n",
+      "scion interpolation table single log-lin elapsed time = 4.02 s\n",
+      "scion interpolation table single log-log elapsed time = 4.12 s\n",
       "-------------------------\n"
      ]
     }
@@ -54,10 +54,10 @@
     "scion_test_linlog = scion.math.LinearLogTable( x, y )\n",
     "scion_test_loglin = scion.math.LogLinearTable( x, y )\n",
     "scion_test_loglog = scion.math.LogLogTable( x, y )\n",
-    "scion_test_interpolationtable_linlin = scion.math.InterpolationTable( x, y, boundaries, [ scion.interpolation.InterpolationType.LinearLinear ] )\n",
-    "scion_test_interpolationtable_linlog = scion.math.InterpolationTable( x, y, boundaries, [ scion.interpolation.InterpolationType.LinearLog ] )\n",
-    "scion_test_interpolationtable_loglin = scion.math.InterpolationTable( x, y, boundaries, [ scion.interpolation.InterpolationType.LogLinear ] )\n",
-    "scion_test_interpolationtable_loglog = scion.math.InterpolationTable( x, y, boundaries, [ scion.interpolation.InterpolationType.LogLog ] )\n",
+    "scion_test_interpolationtable_linlin = scion.math.InterpolationTable( x, y )\n",
+    "scion_test_interpolationtable_linlog = scion.math.InterpolationTable( x, y, scion.interpolation.InterpolationType.LinearLog )\n",
+    "scion_test_interpolationtable_loglin = scion.math.InterpolationTable( x, y, scion.interpolation.InterpolationType.LogLinear )\n",
+    "scion_test_interpolationtable_loglog = scion.math.InterpolationTable( x, y, scion.interpolation.InterpolationType.LogLog )\n",
     "\n",
     "print( 'scion :', scion_test_linlin( 25. ) )\n",
     "print( 'scion :', scion_test_linlog( 25. ) )\n",
@@ -140,15 +140,15 @@
       "scion : [1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0, 11.0, 12.0, 13.0, 14.0, 15.0, 16.0, 17.0, 18.0, 19.0, 20.0, 21.0, 22.0, 23.0, 24.0, 25.0, 26.0, 27.0, 28.0, 29.0, 30.0, 31.0, 32.0, 33.0, 34.0, 35.0, 36.0, 37.0, 38.0, 39.0, 40.0, 41.0, 42.0, 43.0, 44.0, 45.0, 46.0, 47.0, 48.0, 49.0, 50.0, 51.0, 52.0, 53.0, 54.0, 55.0, 56.0, 57.0, 58.0, 59.0, 60.0, 61.0, 62.0, 63.0, 64.0, 65.0, 66.0, 67.0, 68.0, 69.0, 70.0, 71.0, 72.0, 73.0, 74.0, 75.0, 76.0, 77.0, 78.0, 79.0, 80.0, 81.0, 82.0, 83.0, 84.0, 85.0, 86.0, 87.0, 88.0, 89.0, 90.0, 91.0, 92.0, 93.0, 94.0, 95.0, 96.0, 97.0, 98.0, 99.0]\n",
       "scion : [1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0, 11.0, 12.0, 13.0, 14.0, 15.0, 16.0, 17.0, 18.0, 19.0, 20.0, 21.0, 22.0, 23.0, 24.0, 25.0, 26.0, 27.0, 28.0, 29.0, 30.0, 31.0, 32.0, 33.0, 34.0, 35.0, 36.0, 37.0, 38.0, 39.0, 40.0, 41.0, 42.0, 43.0, 44.0, 45.0, 46.0, 47.0, 48.0, 49.0, 50.0, 51.0, 52.0, 53.0, 54.0, 55.0, 56.0, 57.0, 58.0, 59.0, 60.0, 61.0, 62.0, 63.0, 64.0, 65.0, 66.0, 67.0, 68.0, 69.0, 70.0, 71.0, 72.0, 73.0, 74.0, 75.0, 76.0, 77.0, 78.0, 79.0, 80.0, 81.0, 82.0, 83.0, 84.0, 85.0, 86.0, 87.0, 88.0, 88.5, 89.0, 89.5, 90.0, 90.5, 91.0, 91.5, 92.0, 92.5, 93.0, 93.5, 94.0, 94.25, 94.5, 94.75, 95.0, 95.25, 95.5, 95.75, 96.0, 96.25, 96.5, 96.75, 97.0, 97.125, 97.25, 97.375, 97.5, 97.625, 97.75, 97.875, 98.0, 98.125, 98.25, 98.375, 98.5, 98.625, 98.75, 98.875, 99.0]\n",
       "-------------------------\n",
-      "scion lin-lin elapsed time = 0.792 s\n",
-      "scion lin-log elapsed time = 5.06 s\n",
-      "scion log-lin elapsed time = 7.01 s\n",
-      "scion log-log elapsed time = 9.01 s\n",
+      "scion lin-lin elapsed time = 3.11 s\n",
+      "scion lin-log elapsed time = 11.2 s\n",
+      "scion log-lin elapsed time = 12.0 s\n",
+      "scion log-log elapsed time = 17.1 s\n",
       "-------------------------\n",
-      "scion interpolation table single lin-lin elapsed time = 0.762 s\n",
-      "scion interpolation table single lin-log elapsed time = 5.02 s\n",
-      "scion interpolation table single log-lin elapsed time = 7.04 s\n",
-      "scion interpolation table single log-log elapsed time = 9.13 s\n",
+      "scion interpolation table single lin-lin elapsed time = 1.95 s\n",
+      "scion interpolation table single lin-log elapsed time = 9.97 s\n",
+      "scion interpolation table single log-lin elapsed time = 10.1 s\n",
+      "scion interpolation table single log-log elapsed time = 15.2 s\n",
       "-------------------------\n"
      ]
     }
@@ -163,15 +163,15 @@
     "scion_test_linlog = scion.math.LinearLogTable( x, y )\n",
     "scion_test_loglin = scion.math.LogLinearTable( x, y )\n",
     "scion_test_loglog = scion.math.LogLogTable( x, y )\n",
-    "scion_test_interpolationtable_linlin = scion.math.InterpolationTable( x, y, boundaries, [ scion.interpolation.InterpolationType.LinearLinear ] )\n",
-    "scion_test_interpolationtable_linlog = scion.math.InterpolationTable( x, y, boundaries, [ scion.interpolation.InterpolationType.LinearLog ] )\n",
-    "scion_test_interpolationtable_loglin = scion.math.InterpolationTable( x, y, boundaries, [ scion.interpolation.InterpolationType.LogLinear ] )\n",
-    "scion_test_interpolationtable_loglog = scion.math.InterpolationTable( x, y, boundaries, [ scion.interpolation.InterpolationType.LogLog ] )\n",
+    "scion_test_interpolationtable_linlin = scion.math.InterpolationTable( x, y )\n",
+    "scion_test_interpolationtable_linlog = scion.math.InterpolationTable( x, y, scion.interpolation.InterpolationType.LinearLog )\n",
+    "scion_test_interpolationtable_loglin = scion.math.InterpolationTable( x, y, scion.interpolation.InterpolationType.LogLinear )\n",
+    "scion_test_interpolationtable_loglog = scion.math.InterpolationTable( x, y, scion.interpolation.InterpolationType.LogLog )\n",
     "\n",
-    "print( 'scion :', scion_test_linlin.linearise().x )\n",
-    "print( 'scion :', scion_test_linlog.linearise().x )\n",
-    "print( 'scion :', scion_test_loglin.linearise().x )\n",
-    "print( 'scion :', scion_test_loglog.linearise().x )\n",
+    "print( 'scion :', scion_test_linlin.linearise()[0] )\n",
+    "print( 'scion :', scion_test_linlog.linearise()[0] )\n",
+    "print( 'scion :', scion_test_loglin.linearise()[0] )\n",
+    "print( 'scion :', scion_test_loglog.linearise()[0] )\n",
     "print( 'scion :', scion_test_interpolationtable_linlin.linearise().x  )\n",
     "print( 'scion :', scion_test_interpolationtable_loglin.linearise().x  )\n",
     "print( 'scion :', scion_test_interpolationtable_linlog.linearise().x  )\n",
@@ -245,10 +245,10 @@
       "scion : 25.495097567963924\n",
       "scion : 24.69570215105186\n",
       "-------------------------\n",
-      "scion evaluate 1 elapsed time = 2.43 s\n",
-      "scion evaluate 2 elapsed time = 2.47 s\n",
-      "scion evaluate 3 elapsed time = 2.71 s\n",
-      "scion evaluate 4 elapsed time = 2.75 s\n",
+      "scion evaluate 1 elapsed time = 3.89 s\n",
+      "scion evaluate 2 elapsed time = 4.1 s\n",
+      "scion evaluate 3 elapsed time = 4.18 s\n",
+      "scion evaluate 4 elapsed time = 4.17 s\n",
       "-------------------------\n"
      ]
     }
@@ -311,7 +311,7 @@
      "text": [
       "scion : [1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0, 10.0, 11.0, 12.0, 13.0, 14.0, 15.0, 16.0, 17.0, 18.0, 19.0, 20.0, 21.0, 22.0, 23.0, 24.0, 25.0, 26.0, 27.0, 28.0, 29.0, 30.0, 31.0, 32.0, 33.0, 34.0, 35.0, 36.0, 37.0, 38.0, 39.0, 40.0, 41.0, 42.0, 43.0, 44.0, 45.0, 46.0, 47.0, 48.0, 49.0, 50.0, 51.0, 52.0, 53.0, 54.0, 55.0, 56.0, 57.0, 58.0, 59.0, 60.0, 61.0, 62.0, 63.0, 64.0, 65.0, 66.0, 67.0, 68.0, 69.0, 70.0, 71.0, 72.0, 73.0, 74.0, 75.0, 76.0, 77.0, 78.0, 79.0, 80.0, 81.0, 82.0, 83.0, 84.0, 85.0, 86.0, 87.0, 88.0, 88.5, 89.0, 89.5, 90.0, 90.5, 91.0, 91.5, 92.0, 92.5, 93.0, 93.5, 94.0, 94.25, 94.5, 94.75, 95.0, 95.25, 95.5, 95.75, 96.0, 96.25, 96.5, 96.75, 97.0, 97.125, 97.25, 97.375, 97.5, 97.625, 97.75, 97.875, 98.0, 98.125, 98.25, 98.375, 98.5, 98.625, 98.75, 98.875, 99.0]\n",
       "-------------------------\n",
-      "scion lin-lin elapsed time = 7.69 s\n",
+      "scion lin-lin elapsed time = 12.2 s\n",
       "-------------------------\n"
      ]
     }
@@ -352,7 +352,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -366,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
